# Babel-LSP

./: Cargo.toml  LICENSE  README.md  fix_params.py  setup.sh  temp
HDL_test_cases/minimal_test/: Babel-LSP.json  adder.vhd  counter.sv  setup.tcl
IEEE_Std/chapters/: INDEX.md  annex_A_Annex_A.md  annex_B_Annex_B.md  annex_C_Annex_C.md  annex_D_Annex_D.md  annex_E_Annex_E.md  annex_F_Annex_F.md  annex_G_Annex_G.md  annex_H_Annex_H.md  annex_I_Annex_I.md  annex_J_Annex_J.md  annex_K_Annex_K.md  annex_L_Annex_L.md  annex_M_Annex_M.md  annex_N_Annex_N.md  annex_O_Annex_O.md  annex_P_Annex_P.md  annex_Q_Annex_Q.md  ch01_Overview.md  ch02_Normative_references.md  ch03_Design_and_verification_building_blocks.md  ch04_Scheduling_semantics.md  ch05_Lexical_conventions.md  ch06_Data_types.md  ch07_Aggregate_data_types.md  ch08_Classes.md  ch09_Processes.md  ch10_Assignment_statements.md  ch11_Operators_and_expressions.md  ch12_Procedural_programming_statements.md  ch13_Tasks_and_functions_(subroutines).md  ch14_Clocking_blocks.md  ch15_Interprocess_synchronization_and_communication.md  ch16_Assertions.md  ch17_Checkers.md  ch18_Constrained_random_value_generation.md  ch19_Functional_coverage.md  ch20_Utility_system_tasks_and_system_functions.md  ch21_Input_output_system_tasks_and_system_functions.md  ch22_Compiler_directives.md  (+19 more)
crates/babel-lsp/: Cargo.toml
crates/babel-lsp/src/: main.rs
crates/cell-library/: Cargo.toml
crates/cell-library/src/: cell_index.rs  lib.rs  parser.rs  redb_store.rs
crates/cell-library/tests/: cell_index_test.rs  library_test.rs  parser_test.rs  store_test.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  core_engine.rs  cross_lang.rs  diagnostic.rs  document.rs  file_classifier.rs  file_store.rs  lib.rs  logging.rs  project_index.rs  project_memory.rs  symbol.rs
crates/core/tests/: coverage_supplement_test.rs  proptest_tests.rs
crates/filelist-parser/: Cargo.toml
crates/filelist-parser/src/: cadence.rs  env_expand.rs  error.rs  lib.rs  preprocess.rs  synopsys.rs  types.rs
crates/filelist-parser/tests/: proptest_tests.proptest-regressions  proptest_tests.rs  types_coverage_test.rs
crates/lsp-router/: Cargo.toml
crates/lsp-router/src/: backend.rs  lib.rs
crates/lsp-router/src/handlers/: completion.rs  definition.rs  formatting.rs  hover.rs  lifecycle.rs  mod.rs  references.rs  symbols.rs  sync.rs
crates/lsp-router/tests/: backend_integration_test.rs  handler_coverage_test.rs  lsp_integration_test.rs  oracle_test.rs  proptest_tests.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/.thanos/logs/: thanosLSP.log.2026-04-04  thanosLSP.log.2026-04-06  thanosLSP.log.2026-06-02
crates/mcp-server/src/: lib.rs  server.rs
crates/mcp-server/src/tools/: check_synthesizability.rs  close_file.rs  create_file.rs  format_file.rs  get_completions.rs  get_definition.rs  get_diagnostics.rs  get_hover.rs  get_project_memory.rs  get_references.rs  get_symbols.rs  insert_after_symbol.rs  insert_before_symbol.rs  mod.rs  open_file.rs  read_file.rs  rename_symbol.rs  replace_content.rs  replace_lines.rs  replace_symbol_body.rs  search_for_pattern.rs  search_symbols.rs  set_log_level.rs  update_file.rs
crates/mcp-server/tests/: integration_test.rs  perf_test.rs  stdio_protocol_test.rs  tool_coverage_test.rs
crates/sv-analyzer/: Cargo.toml
crates/sv-analyzer/src/: ast_json.rs  completion.rs  definition.rs  diagnostics.rs  formatter.rs  hover.rs  lib.rs  slang_driver.rs  slang_ffi.rs  symbol_collector.rs  synth_checker.rs
crates/tcl-analyzer/: Cargo.toml
crates/tcl-analyzer/src/: eda_completion.rs  lib.rs  parser.rs  proc_analyzer.rs  source_graph.rs  var_tracker.rs
crates/tcl-analyzer/src/eda_db/: cadence_genus.rs  cadence_innovus.rs  mod.rs  quartus.rs  synopsys_dc.rs  synopsys_pt.rs  vivado.rs
crates/tcl-analyzer/tests/: proptest_tests.rs
crates/thanosLSP/: Cargo.toml
crates/thanosLSP/src/: main.rs
crates/vhdl-analyzer/: Cargo.toml
crates/vhdl-analyzer/src/: diagnostics.rs  lib.rs  parser.rs  symbol_collector.rs
crates/vhdl-analyzer/tests/: proptest_tests.proptest-regressions  proptest_tests.rs
scripts/: pdf_to_markdown.py  setup.sh  split_chapters.py
