[package]
name = "babel-lsp"
description = "HDL Language Server (VHDL/SV/TCL) — dual LSP + MCP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "Babel-LSP"
path = "src/main.rs"

[dependencies]
babel-lsp-core = { workspace = true }
babel-lsp-lsp = { workspace = true }
babel-lsp-mcp = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
