[package]
name = "babel-lsp-filelist"
description = "Synopsys .f / Cadence filelist 解析器"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
babel-lsp-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }