[package]
name = "babel-lsp-lsp"
description = "LSP 协议处理层（tower-lsp）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
babel-lsp-core = { workspace = true }
babel-lsp-sv = { workspace = true }
babel-lsp-vhdl = { workspace = true }
babel-lsp-tcl = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
smol_str = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = "0.4"
tower-test = "0.4"
proptest = { workspace = true }
url = { workspace = true }