[package]
name = "babel-lsp-mcp"
description = "MCP 协议处理层（rmcp SSE）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
babel-lsp-core = { workspace = true }
babel-lsp-sv = { workspace = true }
babel-lsp-vhdl = { workspace = true }
babel-lsp-tcl = { workspace = true }
babel-lsp-lsp = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
smol_str = { workspace = true }
url = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = { workspace = true }