[package]
name = "thanosLSP-vhdl"
description = "VHDL 语言分析器（基于 vhdl_lang）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thanosLSP-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }